# rustmandel_cuda

./: .gitignore  Cargo.toml  build_and_run.sh  build_and_run_release.sh  timings
common/: Cargo.toml
common/src/: lib.rs
cuda_kernel/: Cargo.toml  build.rs
cuda_kernel/src/: main.rs
cuda_kernel_mandel/: Cargo.toml
cuda_kernel_mandel/src/: main.rs
nvptx-support/: Readme.md
nvptx-support/ptx-support-macros/src/: error.rs
src/: bla.rs  main.rs  main_cpu.rs  mandel_cuda.rs  mandel_multi_core.rs  mandel_single_core.rs  mandel_utils.rs
xxxxxnvptx-support/ptx-support-macros/src/: args.rs  lib.rs
